--- a/templates/default/monit/unicorn.conf.erb
+++ b/templates/default/monit/unicorn.conf.erb
@@ -6,5 +6,5 @@ check process <%= app.name %>_unicorn
 with pidfile <%= app.run_path %>/unicorn.pid
 start program = "<%= app_init :upgrade %>"
 stop  program = "<%= app_init :stop %>"
-if failed unixsocket <%= app.socket %> then start
+if failed unixsocket <%= app.unicorn.socket %> then start
 group <%= app.name %>
