fix rails replication (shards.yml)

--- a/templates/default/shards.yml.erb
+++ b/templates/default/shards.yml.erb
@@ -5,7 +5,7 @@ octopus:
  
   <%= app.environment %>:
 <% app[:postgresql][:nodes].each_with_index do |host, i| %>
-  <% next if host == app.private_ip %>
+  <% next if host == app.database.host %>
   slave<%=i%>:
     host: <%=host%>
     adapter: <%=app.database.type%>
