--- a/templates/default/database.yml.erb
+++ b/templates/default/database.yml.erb
@@ -1,11 +1,13 @@
-<%=YAML.dump(Hash[{app.environment=> {}}.map {|env, conf| [env, @db_conf.merge(conf).to_hash] }])%>
+<%=app.environment%>:
+  <%=YAML.dump(@db_conf)%>
 
 <% if app[:postgresql] && app.postgresql[:nodes] %>
   <% app.postgresql[:nodes].each do |host| %>
     <% role = app.private_ip==host ? app.postgresql[:replication] : (app.postgresql[:replication]=='master' ? 'slave': 'master') %>
     <% @db_conf['host'] = host %>
 
-<%=YAML.dump(Hash[{"#{app.environment}_#{role}" => {}}.map {|env, conf| [env, @db_conf.merge(conf).to_hash] }])%>
+<%="#{app.environment}_#{role}"%>:
+  <%=YAML.dump(@db_conf)%>
 
   <% end %>
 <% end %>
