--- a/templates/default/database.yml.erb
+++ b/templates/default/database.yml.erb
@@ -1,13 +1,10 @@
-<%=app.environment%>:
-  <%=YAML.dump(@db_conf)%>
-
+<% environments = Hash[{app.environment=> {}}] %>
 <% if app[:postgresql] && app.postgresql[:nodes] %>
   <% app.postgresql[:nodes].each do |host| %>
     <% role = app.private_ip==host ? app.postgresql[:replication] : (app.postgresql[:replication]=='master' ? 'slave': 'master') %>
     <% @db_conf['host'] = host %>
-
-<%="#{app.environment}_#{role}"%>:
-  <%=YAML.dump(@db_conf)%>
-
+    <% environments["#{app.environment}_#{role}"] = @db_conf %>
   <% end %>
 <% end %>
+
+<%=YAML.dump(Hash[environments.map {|env, conf| [env, @db_conf.merge(conf).to_hash] }])%>
